fixed image covering issue on welcome page

--- a/app/assets/stylesheets/pages_welcome.scss
+++ b/app/assets/stylesheets/pages_welcome.scss
@@ -4,7 +4,7 @@
 
     .background-image {
         width: 100%;
-        height:100vh;
+        min-height:100vh;
         background-image: image-url("paint_on_canvas.jpg");
         background-size: cover;
         background-repeat: no-repeat;
@@ -64,11 +64,12 @@
 
     h1 {
         text-align: center;
-        margin-top: 5%;
+        margin: 0;
         font-family: 'Racing Sans One', cursive;
         color: rgb(255, 255, 255);
         text-shadow: black 2px 2px;
         letter-spacing: 0.075em;
+        padding: 5%;
     }
     h2 {
         text-align: center;
